--- a/android/app/src/main/res/drawable-v21/launch_background.xml
+++ b/android/app/src/main/res/drawable-v21/launch_background.xml
@@ -3,4 +3,6 @@
 <!--    <item>-->
 <!--        <bitmap android:gravity="fill" android:src="@drawable/background"/>-->
 <!--    </item>-->
+
+    <item android:drawable="@color/background" />
 </layer-list>
