--- a/android/app/src/main/res/layout/splash_view.xml
+++ b/android/app/src/main/res/layout/splash_view.xml
@@ -25,10 +25,9 @@
         android:layout_width="match_parent"
         android:layout_marginBottom="160dp"
         android:layout_height="wrap_content"
-        android:text="AAB Academy"
-        android:textColor="#FFFFFF"
+        android:text="@string/abc_secondary_school"
+        android:textColor="#BFBDBD"
         android:textSize="35sp"
-        android:textAlignment="center"
         android:gravity="center_horizontal|center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
